<resources>
    <string name="app_name">MAD_Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="event_title">Title</string>
    <string name="event_venue">Venue</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_number_of_attendees">Number of attendees</string>
    <string name="event_location">Location</string>
    <string name="edit_button">Edit</string>
    <string name="event_movie">Movie</string>
    <string name="event_id">ID</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="remove">Remove</string>
    <string name="title_movie">Title</string>
    <string name="year_movie">Year</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="show_attendees">Show attendees</string>
</resources>
