<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/eventTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_title"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventVenueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/event_venue"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintStart_toStartOf="@+id/eventTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleTextView" />

    <TextView
        android:id="@+id/eventStartDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_start_date"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="@+id/eventLocationTextView"
        app:layout_constraintTop_toBottomOf="@+id/eventLocationTextView" />

    <TextView
        android:id="@+id/eventAttendeesNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_number_of_attendees"
        app:layout_constraintStart_toStartOf="@+id/eventStartDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/eventStartDateTextView" />

    <TextView
        android:id="@+id/eventLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintStart_toStartOf="@+id/eventVenueTextView"
        app:layout_constraintTop_toBottomOf="@+id/eventVenueTextView" />

    <Button
        android:id="@+id/eventEditButton"
        android:layout_width="72dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/edit_button"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventMovieTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/event_movie"
        app:layout_constraintStart_toStartOf="@+id/eventAttendeesNumberTextView"
        app:layout_constraintTop_toBottomOf="@+id/eventAttendeesNumberTextView" />

    <TextView
        android:id="@+id/eventIdTextView"
        android:layout_width="12dp"
        android:layout_height="13dp"
        android:text="@string/event_id"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/eventMovieTextView"
        app:layout_constraintEnd_toStartOf="@+id/eventStartDateTextView"
        app:layout_constraintStart_toStartOf="@+id/eventStartDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/eventMovieTextView" />

</android.support.constraint.ConstraintLayout>
