<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/moviePosterImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/movieInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/moviePosterImageView">
        <TextView
            android:id="@+id/movieTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_movie"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieYearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_movie"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/movieEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieInfo"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:background="@color/design_default_color_primary"
        android:padding="2dp"
        android:text="@string/edit"
        android:textColor="@android:color/background_light"
        android:textSize="10sp" />



</RelativeLayout>
